--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">MyRealTrip</string>
+
+    <string name="explain0">최신 뉴스를 제공합니다.</string>
+    <string name="explain1">뉴스의 키워드를 알아보세요</string>
+    <string name="explain2"></string>
+    <string name="version">v1.0</string>
 </resources>
